Class Projects/C- Compiler - CS 445 (Compiler Design)/HW4/c-.output
Terminals unused in grammar

   UNDEFINED


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList declaration
    3                | declaration

    4 declaration: varDeclaration
    5            | funDeclaration

    6 varDeclaration: typeSpecifier varDeclList ';'

    7 scopedVarDeclaration: scopedTypeSpecifier varDeclList ';'

    8 varDeclList: varDeclList ',' varDeclInitialize
    9            | varDeclInitialize

   10 varDeclInitialize: varDeclId
   11                  | varDeclId ':' simpleExpression

   12 varDeclId: ID
   13          | ID '[' NUMCONST ']'

   14 scopedTypeSpecifier: STATIC typeSpecifier
   15                    | typeSpecifier

   16 typeSpecifier: INT
   17              | BOOL
   18              | CHAR

   19 funDeclaration: typeSpecifier ID '(' params ')' statement
   20               | ID '(' params ')' statement

   21 params: paramList
   22       | %empty

   23 paramList: paramList ';' paramTypeList
   24          | paramTypeList

   25 paramTypeList: typeSpecifier paramIdList

   26 paramIdList: paramIdList ',' paramId
   27            | paramId

   28 paramId: ID
   29        | ID '[' ']'

   30 statement: matched
   31          | unmatched

   32 matched: expressionStmt
   33        | compoundStmt
   34        | matchedSelStmt
   35        | matchedWhileStmt
   36        | matchedLoopStmt
   37        | returnStmt
   38        | breakStmt

   39 unmatched: unmatchedSelStmt
   40          | unmatchedWhileStmt
   41          | unmatchedLoopStmt

   42 compoundStmt: '{' localDeclarations statementList '}'

   43 matchedSelStmt: IF simpleExpression THEN matched matchedElsif

   44 matchedElsif: ELSIF simpleExpression THEN matched matchedElsif
   45             | ELSE matched

   46 unmatchedSelStmt: IF simpleExpression THEN unmatched
   47                 | IF simpleExpression THEN matched
   48                 | IF simpleExpression THEN matched unmatchedElsif

   49 unmatchedElsif: ELSIF simpleExpression THEN matched unmatchedElsif
   50               | ELSIF simpleExpression THEN matched
   51               | ELSIF simpleExpression THEN unmatched
   52               | ELSE unmatched

   53 matchedWhileStmt: WHILE simpleExpression DO matched

   54 unmatchedWhileStmt: WHILE simpleExpression DO unmatched

   55 matchedLoopStmt: LOOP ID '=' iterationRange DO matched
   56                | LOOP FOREVER matched

   57 unmatchedLoopStmt: LOOP ID '=' iterationRange DO unmatched
   58                  | LOOP FOREVER unmatched

   59 returnStmt: RETURN ';'
   60           | RETURN expression ';'

   61 breakStmt: BREAK ';'

   62 localDeclarations: localDeclarations scopedVarDeclaration
   63                  | %empty

   64 iterationRange: simpleExpression RANGE simpleExpression
   65               | simpleExpression RANGE simpleExpression ':' simpleExpression

   66 statementList: statementList statement
   67              | %empty

   68 expressionStmt: expression ';'
   69               | ';'

   70 expression: mutable '=' expression
   71           | mutable INC
   72           | mutable DEC
   73           | mutable ADDASS expression
   74           | mutable SUBASS expression
   75           | mutable MULASS expression
   76           | mutable DIVASS expression
   77           | simpleExpression

   78 simpleExpression: simpleExpression OR andExpression
   79                 | andExpression

   80 andExpression: andExpression AND unaryRelExpression
   81              | unaryRelExpression

   82 unaryRelExpression: NOT unaryRelExpression
   83                   | relExpression

   84 relExpression: sumExpression relop sumExpression
   85              | sumExpression

   86 relop: LESSEQ
   87      | '<'
   88      | '>'
   89      | GRTEQ
   90      | EQ
   91      | NOTEQ

   92 sumExpression: sumExpression sumop mulExpression
   93              | mulExpression

   94 sumop: '+'
   95      | '-'

   96 mulExpression: mulExpression mulop unaryExpression
   97              | unaryExpression

   98 mulop: '/'
   99      | '*'
  100      | '%'

  101 unaryExpression: unaryop unaryExpression
  102                | factor

  103 unaryop: '-'
  104        | '*'
  105        | '?'

  106 factor: mutable
  107       | immutable

  108 mutable: ID
  109        | mutable '[' expression ']'

  110 immutable: '(' expression ')'
  111          | call
  112          | constant

  113 call: ID '(' args ')'

  114 args: argList
  115     | %empty

  116 argList: argList ',' expression
  117        | expression

  118 constant: NUMCONST
  119         | BOOLCONST
  120         | CHARCONST
  121         | STRINGCONST


Terminals, with rules where they appear

$end (0) 0
'%' (37) 100
'(' (40) 19 20 110 113
')' (41) 19 20 110 113
'*' (42) 99 104
'+' (43) 94
',' (44) 8 26 116
'-' (45) 95 103
'/' (47) 98
':' (58) 11 65
';' (59) 6 7 23 59 60 61 68 69
'<' (60) 87
'=' (61) 55 57 70
'>' (62) 88
'?' (63) 105
'[' (91) 13 29 109
']' (93) 13 29 109
'{' (123) 42
'}' (125) 42
error (256)
INT (258) 16
ID (259) 12 13 19 20 28 29 55 57 108 113
BOOL (260) 17
BOOLCONST (261) 119
NUMCONST (262) 13 118
ADDASS (263) 73
SUBASS (264) 74
DIVASS (265) 76
MULASS (266) 75
EQ (267) 90
LESSEQ (268) 86
GRTEQ (269) 89
NOTEQ (270) 91
AND (271) 80
OR (272) 78
NOT (273) 82
IF (274) 43 46 47 48
THEN (275) 43 44 46 47 48 49 50 51
ELSIF (276) 44 49 50 51
ELSE (277) 45 52
WHILE (278) 53 54
DO (279) 53 54 55 57
BREAK (280) 61
LOOP (281) 55 56 57 58
RANGE (282) 64 65
FOREVER (283) 56 58
STATIC (284) 14
RETURN (285) 59 60
CHAR (286) 18
DEC (287) 72
INC (288) 71
CHARCONST (289) 120
STRINGCONST (290) 121
UNDEFINED (291)


Nonterminals, with rules where they appear

$accept (55)
    on left: 0
program (56)
    on left: 1, on right: 0
declarationList (57)
    on left: 2 3, on right: 1 2
declaration (58)
    on left: 4 5, on right: 2 3
varDeclaration (59)
    on left: 6, on right: 4
scopedVarDeclaration (60)
    on left: 7, on right: 62
varDeclList (61)
    on left: 8 9, on right: 6 7 8
varDeclInitialize (62)
    on left: 10 11, on right: 8 9
varDeclId (63)
    on left: 12 13, on right: 10 11
scopedTypeSpecifier (64)
    on left: 14 15, on right: 7
typeSpecifier (65)
    on left: 16 17 18, on right: 6 14 15 19 25
funDeclaration (66)
    on left: 19 20, on right: 5
params (67)
    on left: 21 22, on right: 19 20
paramList (68)
    on left: 23 24, on right: 21 23
paramTypeList (69)
    on left: 25, on right: 23 24
paramIdList (70)
    on left: 26 27, on right: 25 26
paramId (71)
    on left: 28 29, on right: 26 27
statement (72)
    on left: 30 31, on right: 19 20 66
matched (73)
    on left: 32 33 34 35 36 37 38, on right: 30 43 44 45 47 48 49 50
    53 55 56
unmatched (74)
    on left: 39 40 41, on right: 31 46 51 52 54 57 58
compoundStmt (75)
    on left: 42, on right: 33
matchedSelStmt (76)
    on left: 43, on right: 34
matchedElsif (77)
    on left: 44 45, on right: 43 44
unmatchedSelStmt (78)
    on left: 46 47 48, on right: 39
unmatchedElsif (79)
    on left: 49 50 51 52, on right: 48 49
matchedWhileStmt (80)
    on left: 53, on right: 35
unmatchedWhileStmt (81)
    on left: 54, on right: 40
matchedLoopStmt (82)
    on left: 55 56, on right: 36
unmatchedLoopStmt (83)
    on left: 57 58, on right: 41
returnStmt (84)
    on left: 59 60, on right: 37
breakStmt (85)
    on left: 61, on right: 38
localDeclarations (86)
    on left: 62 63, on right: 42 62
iterationRange (87)
    on left: 64 65, on right: 55 57
statementList (88)
    on left: 66 67, on right: 42 66
expressionStmt (89)
    on left: 68 69, on right: 32
expression (90)
    on left: 70 71 72 73 74 75 76 77, on right: 60 68 70 73 74 75 76
    109 110 116 117
simpleExpression (91)
    on left: 78 79, on right: 11 43 44 46 47 48 49 50 51 53 54 64 65
    77 78
andExpression (92)
    on left: 80 81, on right: 78 79 80
unaryRelExpression (93)
    on left: 82 83, on right: 80 81 82
relExpression (94)
    on left: 84 85, on right: 83
relop (95)
    on left: 86 87 88 89 90 91, on right: 84
sumExpression (96)
    on left: 92 93, on right: 84 85 92
sumop (97)
    on left: 94 95, on right: 92
mulExpression (98)
    on left: 96 97, on right: 92 93 96
mulop (99)
    on left: 98 99 100, on right: 96
unaryExpression (100)
    on left: 101 102, on right: 96 97 101
unaryop (101)
    on left: 103 104 105, on right: 101
factor (102)
    on left: 106 107, on right: 102
mutable (103)
    on left: 108 109, on right: 70 71 72 73 74 75 76 106 109
immutable (104)
    on left: 110 111 112, on right: 107
call (105)
    on left: 113, on right: 111
args (106)
    on left: 114 115, on right: 113
argList (107)
    on left: 116 117, on right: 114 116
constant (108)
    on left: 118 119 120 121, on right: 112


State 0

    0 $accept: . program $end

    INT   shift, and go to state 1
    ID    shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    program          go to state 5
    declarationList  go to state 6
    declaration      go to state 7
    varDeclaration   go to state 8
    typeSpecifier    go to state 9
    funDeclaration   go to state 10


State 1

   16 typeSpecifier: INT .

    $default  reduce using rule 16 (typeSpecifier)


State 2

   20 funDeclaration: ID . '(' params ')' statement

    '('  shift, and go to state 11


State 3

   17 typeSpecifier: BOOL .

    $default  reduce using rule 17 (typeSpecifier)


State 4

   18 typeSpecifier: CHAR .

    $default  reduce using rule 18 (typeSpecifier)


State 5

    0 $accept: program . $end

    $end  shift, and go to state 12


State 6

    1 program: declarationList .
    2 declarationList: declarationList . declaration

    INT   shift, and go to state 1
    ID    shift, and go to state 2
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 1 (program)

    declaration     go to state 13
    varDeclaration  go to state 8
    typeSpecifier   go to state 9
    funDeclaration  go to state 10


State 7

    3 declarationList: declaration .

    $default  reduce using rule 3 (declarationList)


State 8

    4 declaration: varDeclaration .

    $default  reduce using rule 4 (declaration)


State 9

    6 varDeclaration: typeSpecifier . varDeclList ';'
   19 funDeclaration: typeSpecifier . ID '(' params ')' statement

    ID  shift, and go to state 14

    varDeclList        go to state 15
    varDeclInitialize  go to state 16
    varDeclId          go to state 17


State 10

    5 declaration: funDeclaration .

    $default  reduce using rule 5 (declaration)


State 11

   20 funDeclaration: ID '(' . params ')' statement

    INT   shift, and go to state 1
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 22 (params)

    typeSpecifier  go to state 18
    params         go to state 19
    paramList      go to state 20
    paramTypeList  go to state 21


State 12

    0 $accept: program $end .

    $default  accept


State 13

    2 declarationList: declarationList declaration .

    $default  reduce using rule 2 (declarationList)


State 14

   12 varDeclId: ID .
   13          | ID . '[' NUMCONST ']'
   19 funDeclaration: typeSpecifier ID . '(' params ')' statement

    '['  shift, and go to state 22
    '('  shift, and go to state 23

    $default  reduce using rule 12 (varDeclId)


State 15

    6 varDeclaration: typeSpecifier varDeclList . ';'
    8 varDeclList: varDeclList . ',' varDeclInitialize

    ';'  shift, and go to state 24
    ','  shift, and go to state 25


State 16

    9 varDeclList: varDeclInitialize .

    $default  reduce using rule 9 (varDeclList)


State 17

   10 varDeclInitialize: varDeclId .
   11                  | varDeclId . ':' simpleExpression

    ':'  shift, and go to state 26

    $default  reduce using rule 10 (varDeclInitialize)


State 18

   25 paramTypeList: typeSpecifier . paramIdList

    ID  shift, and go to state 27

    paramIdList  go to state 28
    paramId      go to state 29


State 19

   20 funDeclaration: ID '(' params . ')' statement

    ')'  shift, and go to state 30


State 20

   21 params: paramList .
   23 paramList: paramList . ';' paramTypeList

    ';'  shift, and go to state 31

    $default  reduce using rule 21 (params)


State 21

   24 paramList: paramTypeList .

    $default  reduce using rule 24 (paramList)


State 22

   13 varDeclId: ID '[' . NUMCONST ']'

    NUMCONST  shift, and go to state 32


State 23

   19 funDeclaration: typeSpecifier ID '(' . params ')' statement

    INT   shift, and go to state 1
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    $default  reduce using rule 22 (params)

    typeSpecifier  go to state 18
    params         go to state 33
    paramList      go to state 20
    paramTypeList  go to state 21


State 24

    6 varDeclaration: typeSpecifier varDeclList ';' .

    $default  reduce using rule 6 (varDeclaration)


State 25

    8 varDeclList: varDeclList ',' . varDeclInitialize

    ID  shift, and go to state 34

    varDeclInitialize  go to state 35
    varDeclId          go to state 17


State 26

   11 varDeclInitialize: varDeclId ':' . simpleExpression

    ID           shift, and go to state 36
    BOOLCONST    shift, and go to state 37
    NUMCONST     shift, and go to state 38
    NOT          shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    '('          shift, and go to state 42
    '-'          shift, and go to state 43
    '*'          shift, and go to state 44
    '?'          shift, and go to state 45

    simpleExpression    go to state 46
    andExpression       go to state 47
    unaryRelExpression  go to state 48
    relExpression       go to state 49
    sumExpression       go to state 50
    mulExpression       go to state 51
    unaryExpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 55
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


State 27

   28 paramId: ID .
   29        | ID . '[' ']'

    '['  shift, and go to state 59

    $default  reduce using rule 28 (paramId)


State 28

   25 paramTypeList: typeSpecifier paramIdList .
   26 paramIdList: paramIdList . ',' paramId

    ','  shift, and go to state 60

    $default  reduce using rule 25 (paramTypeList)


State 29

   27 paramIdList: paramId .

    $default  reduce using rule 27 (paramIdList)


State 30

   20 funDeclaration: ID '(' params ')' . statement

    ID           shift, and go to state 36
    BOOLCONST    shift, and go to state 37
    NUMCONST     shift, and go to state 38
    NOT          shift, and go to state 39
    IF           shift, and go to state 61
    WHILE        shift, and go to state 62
    BREAK        shift, and go to state 63
    LOOP         shift, and go to state 64
    RETURN       shift, and go to state 65
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ';'          shift, and go to state 66
    '('          shift, and go to state 42
    '{'          shift, and go to state 67
    '-'          shift, and go to state 43
    '*'          shift, and go to state 44
    '?'          shift, and go to state 45

    statement           go to state 68
    matched             go to state 69
    unmatched           go to state 70
    compoundStmt        go to state 71
    matchedSelStmt      go to state 72
    unmatchedSelStmt    go to state 73
    matchedWhileStmt    go to state 74
    unmatchedWhileStmt  go to state 75
    matchedLoopStmt     go to state 76
    unmatchedLoopStmt   go to state 77
    returnStmt          go to state 78
    breakStmt           go to state 79
    expressionStmt      go to state 80
    expression          go to state 81
    simpleExpression    go to state 82
    andExpression       go to state 47
    unaryRelExpression  go to state 48
    relExpression       go to state 49
    sumExpression       go to state 50
    mulExpression       go to state 51
    unaryExpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 83
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


State 31

   23 paramList: paramList ';' . paramTypeList

    INT   shift, and go to state 1
    BOOL  shift, and go to state 3
    CHAR  shift, and go to state 4

    typeSpecifier  go to state 18
    paramTypeList  go to state 84


State 32

   13 varDeclId: ID '[' NUMCONST . ']'

    ']'  shift, and go to state 85


State 33

   19 funDeclaration: typeSpecifier ID '(' params . ')' statement

    ')'  shift, and go to state 86


State 34

   12 varDeclId: ID .
   13          | ID . '[' NUMCONST ']'

    '['  shift, and go to state 22

    $default  reduce using rule 12 (varDeclId)


State 35

    8 varDeclList: varDeclList ',' varDeclInitialize .

    $default  reduce using rule 8 (varDeclList)


State 36

  108 mutable: ID .
  113 call: ID . '(' args ')'

    '('  shift, and go to state 87

    $default  reduce using rule 108 (mutable)


State 37

  119 constant: BOOLCONST .

    $default  reduce using rule 119 (constant)


State 38

  118 constant: NUMCONST .

    $default  reduce using rule 118 (constant)


State 39

   82 unaryRelExpression: NOT . unaryRelExpression

    ID           shift, and go to state 36
    BOOLCONST    shift, and go to state 37
    NUMCONST     shift, and go to state 38
    NOT          shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    '('          shift, and go to state 42
    '-'          shift, and go to state 43
    '*'          shift, and go to state 44
    '?'          shift, and go to state 45

    unaryRelExpression  go to state 88
    relExpression       go to state 49
    sumExpression       go to state 50
    mulExpression       go to state 51
    unaryExpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 55
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


State 40

  120 constant: CHARCONST .

    $default  reduce using rule 120 (constant)


State 41

  121 constant: STRINGCONST .

    $default  reduce using rule 121 (constant)


State 42

  110 immutable: '(' . expression ')'

    ID           shift, and go to state 36
    BOOLCONST    shift, and go to state 37
    NUMCONST     shift, and go to state 38
    NOT          shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    '('          shift, and go to state 42
    '-'          shift, and go to state 43
    '*'          shift, and go to state 44
    '?'          shift, and go to state 45

    expression          go to state 89
    simpleExpression    go to state 82
    andExpression       go to state 47
    unaryRelExpression  go to state 48
    relExpression       go to state 49
    sumExpression       go to state 50
    mulExpression       go to state 51
    unaryExpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 83
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


State 43

  103 unaryop: '-' .

    $default  reduce using rule 103 (unaryop)


State 44

  104 unaryop: '*' .

    $default  reduce using rule 104 (unaryop)


State 45

  105 unaryop: '?' .

    $default  reduce using rule 105 (unaryop)


State 46

   11 varDeclInitialize: varDeclId ':' simpleExpression .
   78 simpleExpression: simpleExpression . OR andExpression

    OR  shift, and go to state 90

    $default  reduce using rule 11 (varDeclInitialize)


State 47

   79 simpleExpression: andExpression .
   80 andExpression: andExpression . AND unaryRelExpression

    AND  shift, and go to state 91

    $default  reduce using rule 79 (simpleExpression)


State 48

   81 andExpression: unaryRelExpression .

    $default  reduce using rule 81 (andExpression)


State 49

   83 unaryRelExpression: relExpression .

    $default  reduce using rule 83 (unaryRelExpression)


State 50

   84 relExpression: sumExpression . relop sumExpression
   85              | sumExpression .
   92 sumExpression: sumExpression . sumop mulExpression

    EQ      shift, and go to state 92
    LESSEQ  shift, and go to state 93
    GRTEQ   shift, and go to state 94
    NOTEQ   shift, and go to state 95
    '<'     shift, and go to state 96
    '>'     shift, and go to state 97
    '+'     shift, and go to state 98
    '-'     shift, and go to state 99

    $default  reduce using rule 85 (relExpression)

    relop  go to state 100
    sumop  go to state 101


State 51

   93 sumExpression: mulExpression .
   96 mulExpression: mulExpression . mulop unaryExpression

    '*'  shift, and go to state 102
    '/'  shift, and go to state 103
    '%'  shift, and go to state 104

    $default  reduce using rule 93 (sumExpression)

    mulop  go to state 105


State 52

   97 mulExpression: unaryExpression .

    $default  reduce using rule 97 (mulExpression)


State 53

  101 unaryExpression: unaryop . unaryExpression

    ID           shift, and go to state 36
    BOOLCONST    shift, and go to state 37
    NUMCONST     shift, and go to state 38
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    '('          shift, and go to state 42
    '-'          shift, and go to state 43
    '*'          shift, and go to state 44
    '?'          shift, and go to state 45

    unaryExpression  go to state 106
    unaryop          go to state 53
    factor           go to state 54
    mutable          go to state 55
    immutable        go to state 56
    call             go to state 57
    constant         go to state 58


State 54

  102 unaryExpression: factor .

    $default  reduce using rule 102 (unaryExpression)


State 55

  106 factor: mutable .
  109 mutable: mutable . '[' expression ']'

    '['  shift, and go to state 107

    $default  reduce using rule 106 (factor)


State 56

  107 factor: immutable .

    $default  reduce using rule 107 (factor)


State 57

  111 immutable: call .

    $default  reduce using rule 111 (immutable)


State 58

  112 immutable: constant .

    $default  reduce using rule 112 (immutable)


State 59

   29 paramId: ID '[' . ']'

    ']'  shift, and go to state 108


State 60

   26 paramIdList: paramIdList ',' . paramId

    ID  shift, and go to state 27

    paramId  go to state 109


State 61

   43 matchedSelStmt: IF . simpleExpression THEN matched matchedElsif
   46 unmatchedSelStmt: IF . simpleExpression THEN unmatched
   47                 | IF . simpleExpression THEN matched
   48                 | IF . simpleExpression THEN matched unmatchedElsif

    ID           shift, and go to state 36
    BOOLCONST    shift, and go to state 37
    NUMCONST     shift, and go to state 38
    NOT          shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    '('          shift, and go to state 42
    '-'          shift, and go to state 43
    '*'          shift, and go to state 44
    '?'          shift, and go to state 45

    simpleExpression    go to state 110
    andExpression       go to state 47
    unaryRelExpression  go to state 48
    relExpression       go to state 49
    sumExpression       go to state 50
    mulExpression       go to state 51
    unaryExpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 55
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


State 62

   53 matchedWhileStmt: WHILE . simpleExpression DO matched
   54 unmatchedWhileStmt: WHILE . simpleExpression DO unmatched

    ID           shift, and go to state 36
    BOOLCONST    shift, and go to state 37
    NUMCONST     shift, and go to state 38
    NOT          shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    '('          shift, and go to state 42
    '-'          shift, and go to state 43
    '*'          shift, and go to state 44
    '?'          shift, and go to state 45

    simpleExpression    go to state 111
    andExpression       go to state 47
    unaryRelExpression  go to state 48
    relExpression       go to state 49
    sumExpression       go to state 50
    mulExpression       go to state 51
    unaryExpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 55
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


State 63

   61 breakStmt: BREAK . ';'

    ';'  shift, and go to state 112


State 64

   55 matchedLoopStmt: LOOP . ID '=' iterationRange DO matched
   56                | LOOP . FOREVER matched
   57 unmatchedLoopStmt: LOOP . ID '=' iterationRange DO unmatched
   58                  | LOOP . FOREVER unmatched

    ID       shift, and go to state 113
    FOREVER  shift, and go to state 114


State 65

   59 returnStmt: RETURN . ';'
   60           | RETURN . expression ';'

    ID           shift, and go to state 36
    BOOLCONST    shift, and go to state 37
    NUMCONST     shift, and go to state 38
    NOT          shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ';'          shift, and go to state 115
    '('          shift, and go to state 42
    '-'          shift, and go to state 43
    '*'          shift, and go to state 44
    '?'          shift, and go to state 45

    expression          go to state 116
    simpleExpression    go to state 82
    andExpression       go to state 47
    unaryRelExpression  go to state 48
    relExpression       go to state 49
    sumExpression       go to state 50
    mulExpression       go to state 51
    unaryExpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 83
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


State 66

   69 expressionStmt: ';' .

    $default  reduce using rule 69 (expressionStmt)


State 67

   42 compoundStmt: '{' . localDeclarations statementList '}'

    $default  reduce using rule 63 (localDeclarations)

    localDeclarations  go to state 117


State 68

   20 funDeclaration: ID '(' params ')' statement .

    $default  reduce using rule 20 (funDeclaration)


State 69

   30 statement: matched .

    $default  reduce using rule 30 (statement)


State 70

   31 statement: unmatched .

    $default  reduce using rule 31 (statement)


State 71

   33 matched: compoundStmt .

    $default  reduce using rule 33 (matched)


State 72

   34 matched: matchedSelStmt .

    $default  reduce using rule 34 (matched)


State 73

   39 unmatched: unmatchedSelStmt .

    $default  reduce using rule 39 (unmatched)


State 74

   35 matched: matchedWhileStmt .

    $default  reduce using rule 35 (matched)


State 75

   40 unmatched: unmatchedWhileStmt .

    $default  reduce using rule 40 (unmatched)


State 76

   36 matched: matchedLoopStmt .

    $default  reduce using rule 36 (matched)


State 77

   41 unmatched: unmatchedLoopStmt .

    $default  reduce using rule 41 (unmatched)


State 78

   37 matched: returnStmt .

    $default  reduce using rule 37 (matched)


State 79

   38 matched: breakStmt .

    $default  reduce using rule 38 (matched)


State 80

   32 matched: expressionStmt .

    $default  reduce using rule 32 (matched)


State 81

   68 expressionStmt: expression . ';'

    ';'  shift, and go to state 118


State 82

   77 expression: simpleExpression .
   78 simpleExpression: simpleExpression . OR andExpression

    OR  shift, and go to state 90

    $default  reduce using rule 77 (expression)


State 83

   70 expression: mutable . '=' expression
   71           | mutable . INC
   72           | mutable . DEC
   73           | mutable . ADDASS expression
   74           | mutable . SUBASS expression
   75           | mutable . MULASS expression
   76           | mutable . DIVASS expression
  106 factor: mutable .
  109 mutable: mutable . '[' expression ']'

    ADDASS  shift, and go to state 119
    SUBASS  shift, and go to state 120
    DIVASS  shift, and go to state 121
    MULASS  shift, and go to state 122
    DEC     shift, and go to state 123
    INC     shift, and go to state 124
    '['     shift, and go to state 107
    '='     shift, and go to state 125

    $default  reduce using rule 106 (factor)


State 84

   23 paramList: paramList ';' paramTypeList .

    $default  reduce using rule 23 (paramList)


State 85

   13 varDeclId: ID '[' NUMCONST ']' .

    $default  reduce using rule 13 (varDeclId)


State 86

   19 funDeclaration: typeSpecifier ID '(' params ')' . statement

    ID           shift, and go to state 36
    BOOLCONST    shift, and go to state 37
    NUMCONST     shift, and go to state 38
    NOT          shift, and go to state 39
    IF           shift, and go to state 61
    WHILE        shift, and go to state 62
    BREAK        shift, and go to state 63
    LOOP         shift, and go to state 64
    RETURN       shift, and go to state 65
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    ';'          shift, and go to state 66
    '('          shift, and go to state 42
    '{'          shift, and go to state 67
    '-'          shift, and go to state 43
    '*'          shift, and go to state 44
    '?'          shift, and go to state 45

    statement           go to state 126
    matched             go to state 69
    unmatched           go to state 70
    compoundStmt        go to state 71
    matchedSelStmt      go to state 72
    unmatchedSelStmt    go to state 73
    matchedWhileStmt    go to state 74
    unmatchedWhileStmt  go to state 75
    matchedLoopStmt     go to state 76
    unmatchedLoopStmt   go to state 77
    returnStmt          go to state 78
    breakStmt           go to state 79
    expressionStmt      go to state 80
    expression          go to state 81
    simpleExpression    go to state 82
    andExpression       go to state 47
    unaryRelExpression  go to state 48
    relExpression       go to state 49
    sumExpression       go to state 50
    mulExpression       go to state 51
    unaryExpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 83
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


State 87

  113 call: ID '(' . args ')'

    ID           shift, and go to state 36
    BOOLCONST    shift, and go to state 37
    NUMCONST     shift, and go to state 38
    NOT          shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    '('          shift, and go to state 42
    '-'          shift, and go to state 43
    '*'          shift, and go to state 44
    '?'          shift, and go to state 45

    $default  reduce using rule 115 (args)

    expression          go to state 127
    simpleExpression    go to state 82
    andExpression       go to state 47
    unaryRelExpression  go to state 48
    relExpression       go to state 49
    sumExpression       go to state 50
    mulExpression       go to state 51
    unaryExpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 83
    immutable           go to state 56
    call                go to state 57
    args                go to state 128
    argList             go to state 129
    constant            go to state 58


State 88

   82 unaryRelExpression: NOT unaryRelExpression .

    $default  reduce using rule 82 (unaryRelExpression)


State 89

  110 immutable: '(' expression . ')'

    ')'  shift, and go to state 130


State 90

   78 simpleExpression: simpleExpression OR . andExpression

    ID           shift, and go to state 36
    BOOLCONST    shift, and go to state 37
    NUMCONST     shift, and go to state 38
    NOT          shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    '('          shift, and go to state 42
    '-'          shift, and go to state 43
    '*'          shift, and go to state 44
    '?'          shift, and go to state 45

    andExpression       go to state 131
    unaryRelExpression  go to state 48
    relExpression       go to state 49
    sumExpression       go to state 50
    mulExpression       go to state 51
    unaryExpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 55
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


State 91

   80 andExpression: andExpression AND . unaryRelExpression

    ID           shift, and go to state 36
    BOOLCONST    shift, and go to state 37
    NUMCONST     shift, and go to state 38
    NOT          shift, and go to state 39
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    '('          shift, and go to state 42
    '-'          shift, and go to state 43
    '*'          shift, and go to state 44
    '?'          shift, and go to state 45

    unaryRelExpression  go to state 132
    relExpression       go to state 49
    sumExpression       go to state 50
    mulExpression       go to state 51
    unaryExpression     go to state 52
    unaryop             go to state 53
    factor              go to state 54
    mutable             go to state 55
    immutable           go to state 56
    call                go to state 57
    constant            go to state 58


State 92

   90 relop: EQ .

    $default  reduce using rule 90 (relop)


State 93

   86 relop: LESSEQ .

    $default  reduce using rule 86 (relop)


State 94

   89 relop: GRTEQ .

    $default  reduce using rule 89 (relop)


State 95

   91 relop: NOTEQ .

    $default  reduce using rule 91 (relop)


State 96

   87 relop: '<' .

    $default  reduce using rule 87 (relop)


State 97

   88 relop: '>' .

    $default  reduce using rule 88 (relop)


State 98

   94 sumop: '+' .

    $default  reduce using rule 94 (sumop)


State 99

   95 sumop: '-' .

    $default  reduce using rule 95 (sumop)


State 100

   84 relExpression: sumExpression relop . sumExpression

    ID           shift, and go to state 36
    BOOLCONST    shift, and go to state 37
    NUMCONST     shift, and go to state 38
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    '('          shift, and go to state 42
    '-'          shift, and go to state 43
    '*'          shift, and go to state 44
    '?'          shift, and go to state 45

    sumExpression    go to state 133
    mulExpression    go to state 51
    unaryExpression  go to state 52
    unaryop          go to state 53
    factor           go to state 54
    mutable          go to state 55
    immutable        go to state 56
    call             go to state 57
    constant         go to state 58


State 101

   92 sumExpression: sumExpression sumop . mulExpression

    ID           shift, and go to state 36
    BOOLCONST    shift, and go to state 37
    NUMCONST     shift, and go to state 38
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    '('          shift, and go to state 42
    '-'          shift, and go to state 43
    '*'          shift, and go to state 44
    '?'          shift, and go to state 45

    mulExpression    go to state 134
    unaryExpression  go to state 52
    unaryop          go to state 53
    factor           go to state 54
    mutable          go to state 55
    immutable        go to state 56
    call             go to state 57
    constant         go to state 58


State 102

   99 mulop: '*' .

    $default  reduce using rule 99 (mulop)


State 103

   98 mulop: '/' .

    $default  reduce using rule 98 (mulop)


State 104

  100 mulop: '%' .

    $default  reduce using rule 100 (mulop)


State 105

   96 mulExpression: mulExpression mulop . unaryExpression

    ID           shift, and go to state 36
    BOOLCONST    shift, and go to state 37
    NUMCONST     shift, and go to state 38
    CHARCONST    shift, and go to state 40
    STRINGCONST  shift, and go to state 41
    '('          shift, and go to state 42
    '-'          shift, and go to state 43
    '*'          shift, and go to state 44
    '?'          shift, and go to state 45
